# openmd

./: .gitignore  .openmd.css  LICENSE  README.md  add-to-.zshrc  mdview.py  obsidian_test.md  openmd-default.css  openmd.py  pyproject.toml  test_katex_mermaid.md
.github/workflows/: publish.yml
docs/: DEVELOPMENT.md
src/: openmd-default.css  openmd-theme-preview.html  openmd.py
