[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmd"
version = "1.3.0"
description = "Fast Markdown previewer for macOS with GitHub-dark theme, sidebar TOC, and multi-file tabs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "RufusLin" }]
requires-python = ">=3.8"
dependencies = [
    "PySide6",
    "Markdown",
    "beautifulsoup4",
]
keywords = ["markdown", "preview", "viewer", "macos", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

[project.scripts]
openmd = "openmd:main"

[project.urls]
Homepage = "https://github.com/RufusLin/openmd"
Repository = "https://github.com/RufusLin/openmd"
Issues = "https://github.com/RufusLin/openmd/issues"

[tool.setuptools]
py-modules = ["openmd"]
