[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmd"
version = "1.4.10"
description = "Fast Markdown previewer with GitHub-dark theme, sidebar TOC, multi-file tabs, and .openmd.css theming"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "RufusLin" }]
requires-python = ">=3.8"
dependencies = [
    "PySide6",
    "Markdown",
    "beautifulsoup4",
]
keywords = ["markdown", "preview", "viewer", "macos", "linux", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

[project.scripts]
openmd = "openmd:main"

[project.urls]
Homepage = "https://github.com/RufusLin/openmd"
Repository = "https://github.com/RufusLin/openmd"
Issues = "https://github.com/RufusLin/openmd/issues"

[tool.setuptools]
py-modules = ["openmd"]

[tool.setuptools.data-files]
"" = ["openmd-default.css"]
