[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmd"
version = "1.4.26"
description = "Fast popup Markdown viewer with sidebar TOC, multi-file tabs, css themes, mermaid, katex, obsidian yaml show/hide, keyboard-based"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "RufusLin" }]
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "Markdown",
    "beautifulsoup4",
    "PyYAML",
]
keywords = ["markdown", "preview", "viewer", "macos", "linux", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[project.scripts]
openmd = "openmd:main"

[project.urls]
Homepage = "https://github.com/RufusLin/openmd"
Repository = "https://github.com/RufusLin/openmd"
Issues = "https://github.com/RufusLin/openmd/issues"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["openmd"]

[tool.setuptools.package-data]
"*" = ["*.css"]

